fix: line in about section on mobile devices

--- a/src/app/sections/Contacts/Contacts.module.css
+++ b/src/app/sections/Contacts/Contacts.module.css
@@ -106,7 +106,7 @@
   }
 
   .contactsTitle {
-    font-size: 40px;
+    font-size: 36px;
     text-align: center;
     font-family: inherit;
     margin: 0 auto;
